                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 07-04-2005 added: Visualisation now runs in a control.  See musicVisualisation.xml for an example.  Some visz's (Boxalizer) probably need redoing.
  - 07-04-2005 fixed: Keymap for numeric + gamepad dialogs.
  - 06-04-2005 fixed: Python checkmark controls.
  - 06-04-2005 added: Left thumbstick individual direction keymappings.
  - 06-04-2005 changed: Visualisations now accept a position on screen parameter.  !!XBMC WILL CRASH IF YOU DON'T UPDATE YOUR VISUALISATIONS!!
  - 06-04-2005 fixed: Stack overflow in volumebar/playcontrol combination.
  - 06-04-2005 updated: Italian language file (Thnx to kotix)
  - 05-04-2005 removed: My Music Albums, Artists, and Genres views.  Use My Music Library instead.
  - 05-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 05-04-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 05-04-2005 added: Python patches [ 1166891 ] and [ 1176789 ] from gimblefoot.
  - 05-04-2005 fixed: List/thumb controls couldn't move right off the spincontrol.
  - 05-04-2005 fixed: Search for home dir checks for keymap.xml as well as the skin folder.
  - 05-04-2005 fixed: Video Genre/Actors now show only those that are associated with a valid movie.
  - 05-04-2005 changed: Video views now use the CGUIViewControl to handle the views.
  - 05-04-2005 fixed: problems with alphanumeric sorting (numbers came after characters)
  - 05-04-2005 fixed: IMDb problem (memory overflow with huge numbers of returned movies).
  - 05-04-2005 changed: Nav view now uses alphanumeric sorting.
  - 04-04-2005 fixed: re-scanning music dirs and music thumbnail caching